Fix a height for the login stuff, otherwise chrome will render the header too tall

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -86,10 +86,12 @@ a
     text-decoration: underline
     
 #loginbar
+    height: 50px;
     float: right
     padding: 20px 0
 
 #logoutbar
+    height: 50px
     float: right
     padding: 20px 0
 	
